--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+
+<!--
+Internet permissions do not affect the `permission_handler` plugin, but are required if your app needs access to
+the internet.
+-->
+<uses-permission android:name="android.permission.INTERNET"/>
+
+<!-- Permissions options for the `location` group -->
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:label="weather_app"
         android:name="${applicationName}"
