--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.4.6
   flutter_svg: ^2.0.9
+  geolocator: ^10.1.0
   http: ^1.1.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
