--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
+  device_preview: ^1.1.0
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
@@ -48,6 +49,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/background.jpeg
 flutter_launcher_icons:
   android: true
   ios: true
