--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "weather_app",
-    "short_name": "weather_app",
+    "name": "Weather App",
+    "short_name": " Weather App",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#hexcode",
