--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: weather_app
-description: A new Flutter project.
+description: A Weather App Project.
 publish_to: 'none'
 version: 0.1.0
 
@@ -7,22 +7,21 @@ environment:
   sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
-  device_preview: ^1.1.0
+  device_preview: 
   flutter:
     sdk: flutter
-  flutter_launcher_icons: ^0.13.1
-  flutter_riverpod: ^2.4.6
-  flutter_svg: ^2.0.9
-  geolocator: ^10.1.0
-  http: ^1.1.0
-  intl: ^0.18.1
-  shared_preferences: ^2.2.2
+  flutter_launcher_icons: 
+  flutter_riverpod: 
+  flutter_svg: 
+  geolocator: 
+  http: 
+  intl: 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  custom_lint: ^0.5.6
+  flutter_lints: 
+  custom_lint: 
 
 flutter:
   uses-material-design: true
