--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,15 @@ environment:
   sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
-  device_preview: 
+  device_preview: ^1.2.0
   flutter:
     sdk: flutter
-  flutter_launcher_icons: 
-  flutter_riverpod: 
-  flutter_svg: 
-  geolocator: 
-  http: 
-  intl: 
+  flutter_launcher_icons: ^0.14.1 
+  flutter_riverpod: ^2.5.1 
+  flutter_svg: ^2.0.10+1 
+  geolocator: ^13.0.1 
+  http: ^1.2.2 
+  intl: ^0.19.0 
 
 dev_dependencies:
   flutter_test:
