--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,21 @@
 name: weather_app
 description: A Weather App Project.
 publish_to: 'none'
-version: 0.1.0
+version: 0.1.1
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: ">=3.6.0 <4.0.0"
 
 dependencies:
-  device_preview: ^1.2.0
+  device_preview_plus: ^2.2.7
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.14.1 
-  flutter_riverpod: ^2.5.1 
-  flutter_svg: ^2.0.10+1 
-  geolocator: ^13.0.1 
-  http: ^1.2.2 
-  intl: ^0.19.0 
+  flutter_riverpod: ^2.6.1 
+  flutter_svg: ^2.0.17
+  geolocator: ^13.0.2 
+  http: ^1.3.0 
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
