--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: weather_app
 description: A Weather App Project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.1
 
 environment:
@@ -10,18 +10,18 @@ dependencies:
   device_preview_plus: ^2.2.7
   flutter:
     sdk: flutter
-  flutter_launcher_icons: ^0.14.1 
-  flutter_riverpod: ^2.6.1 
+  flutter_launcher_icons: ^0.14.1
+  flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
-  geolocator: ^13.0.2 
-  http: ^1.3.0 
-  intl: ^0.19.0
+  geolocator: ^14.0.2
+  http: ^1.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: 
-  custom_lint: 
+  flutter_lints:
+  custom_lint:
 
 flutter:
   uses-material-design: true
@@ -39,7 +39,7 @@ flutter:
         - asset: assets/fonts/Poppins-Medium.ttf
         - asset: assets/fonts/Poppins-Bold.ttf
           weight: 700
-          
+
     - family: Sen
       fonts:
         - asset: assets/fonts/Sen-Bold.ttf
